<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AECSVA</string>
    <string name="prefs_file" translatable="false">edu.upc.AppCatedraUnesco.PREFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="infoAcceptar" translatable="true" tools:ignore="MissingTranslation">Aceptar</string>
    <string name="login_sucs">Inicio de sesión correcto</string>
    <string name="error_campos">Tienes que introducir los campos solicitados</string>
    <string name="error_login">Error inicio de sesión</string>
    <string name="error_login2">Se ha producido un error al iniciar sesión</string>
    <string name="error_pass">La contraseña debe contener más de 6 caracteres</string>
    <string name="error_mail">Tienes que introducir un mail válido</string>
    <string name="error_dni">No puedes dejar sin rellenar el DNI</string>
    <string name="error_nombre">No puedes dejar sin rellenar el nombre</string>
    <string name="error_telefono">Tienes que introducir un número de teléfono válido</string>
    <string name="error_registro">No hemos podido registrarte</string>
    <string name="error_envia_mail">Error al enviar el correo electrónico</string>
    <string name="error_formato_mail">El formato del email es inválido</string>
    <string name="mail_sucs">¡Correo enviado correctamente!</string>
    <string name="revisa_mail">Revisa tu email electrónico para cambiar la contraseña</string>
    <string name="powered_by">Desarrollado por Cátedra UNESCO</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="language_es">Español</string>
    <string name="language_en">Inglés</string>
    <string name="language_ca">Catalán</string>
    <string name="settingsfragment_selectlang">Selecciona idioma</string>
    <string name="txt_idenificat">IDENTIFICATE</string>
    <string name="txt_intro_correo">Introduce Correo</string>
    <string name="txt_intro_password">Introduce Contraseña</string>
    <string name="txt_password_olvidada">¿Olvidaste tu contraseña?</string>
    <string name="txt_recordar">Recuérdeme</string>
    <string name="txt_identificar">Iniciar sesión</string>
    <string name="txt_add_ecoinf">Añadir Ecoinfreastructura</string>
    <string name="txt_add_producto">Añadir Producto</string>
    <string name="txt_usuarios">Crear Usuarios</string>
    <string name="txt_crear_noticia">Crear Noticia</string>
    <string name="add_ecoinf1">Creador de Ecoinfraestructuras</string>
    <string name="add_ecoinf2">Nombre Ecoinfraestructura</string>
    <string name="add_ecoinf3">Número de Teléfono</string>
    <string name="add_ecoinf4">Url</string>
    <string name="add_ecoinf5">Coordenadas ecoinfraestructura</string>
    <string name="add_ecoinf6">Latitud</string>
    <string name="add_ecoinf7">Longitud</string>
    <string name="add_ecoinf8">Dirección</string>
    <string name="btn_subirimagen">Subir Imagen</string>
    <string name="add_noticia1">Creador de Noticias</string>
    <string name="add_noticia2">Título</string>
    <string name="add_noticia3">Descripción</string>
    <string name="add_productos1">Creador de Productos</string>
    <string name="add_producto2">Nombre Producto</string>
    <string name="add_producto3">Lugar Comercialización</string>
    <string name="fecoinf1">Ecoinfraestructuras</string>
    <string name="finfoprobl1">Describe el problema de la aplicación</string>
    <string name="finfoprobl2">Enviar</string>
    <string name="bEditar">Editar</string>
    <string name="bEliminar">Eliminar</string>
    <string name="fnoticias1">Noticias</string>
    <string name="fopciones1">Configuración</string>
    <string name="fopciones2">Compartir aplicación</string>
    <string name="fopciones3">Cambiar el idioma</string>
    <string name="fopciones4">Informar problema</string>
    <string name="fopciones5">Desconectarse</string>
    <string name="fopciones6">Iniciar Sesión</string>
    <string name="fproduct1">Productos</string>
    <string name="frecpass1">Introduce el correo que quieres cambiarle la contraseña</string>
    <string name="frecpass2">Introdueix Correu</string>
    <string name="frecpass3">Enviar</string>
    <string name="publexit">Se ha publicado con éxito!</string>
    <string name="dirececoinf">Debes introducir la dirección de la ecoinfraestructura</string>
    <string name="introcoor">Debes introducir las coordenadas de la ecoinfraestructura</string>
    <string name="intronumt">Debes introducir el número de teléfono</string>
    <string name="intromnomeco">Debes introducir el nombre de la ecoinfraestructura</string>
    <string name="cargaimg">La imagen se esta subiendo espera</string>
    <string name="introurln">Introduce la url de la noticia</string>
    <string name="introdesc">La noticia necesita una descripción</string>
    <string name="introtitulon">Debes introducir el título a la noticia</string>
    <string name="ecoinfelim">Ecoinfraestructura eliminada correctamente</string>
    <string name="noticiaelim">Noticia eliminada correctamente</string>
    <string name="appprueba">App en pruebas</string>
    <string-array name="spinner_language">
        <item>Català</item>
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="txtCreaun">CREA UNA</string>
    <string name="txtCuenta">CUENTA</string>
    <string name="txtEmail">Correo electrónico</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtConPass">Confirmar contraseña</string>
    <string name="txtCrearCom">Crear Cuenta</string>
    <string name="txtConsulta">Consulta enviada correctamente!</string>
    <string name="txt_eliminarnoticia">Eliminar noticia</string>
    <string name="txt_eliminarnoticia2">Estás seguro que quieres eliminar la noticia?</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="txt_eliminarecoinf">Eliminar ecoinfraestructura</string>
    <string name="txt_eliminarecoinf2">Estás seguro que quieres eliminar la ecoinfraestructura?</string>
    <string name="txt_info">Es una App en conjunto con el proyecto \'Alianzas para la Emergencia Climática y Sanitaria en el Valle De Aburrá\'. El objetivo principal es realizar intervenciones modelo integrales e innovadoras en cuencas urbanas de Medellín, articulando la recomposición del tejido social a través de la construcción de un acuerdo sobre el territorio.</string>
    <string name="txt_info2">La funcionalidad de la App es hacer un visor con geolocalización de las ecoinfraestructuras y un apartado con las últimas noticias sobre estas.</string>
    <string name="txt_infopregunta">¿Qué funcionalidad tiene esta APP?</string>
    <string name="txt_infocolab">Colaboradores de la App:</string>
</resources>