<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btEcoinf"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:text="@string/txt_add_ecoinf"
            app:layout_constraintBottom_toTopOf="@+id/btNoticia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.632"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btProducto"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_add_producto"
            app:layout_constraintBottom_toTopOf="@+id/btUsuarios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btNoticia"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="@color/black"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btUsuarios"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:text="@string/txt_usuarios"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btProducto"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btNoticia"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:text="@string/txt_crear_noticia"
            app:layout_constraintBottom_toTopOf="@+id/btProducto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btEcoinf"
            android:backgroundTint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>